--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "denmark-institution",
   "description": "Get information about an institution given its institution number",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Andreas Madsen <amwebdk@gmail.com>",
   "scripts": {
-    "install": "node --strong_mode install.js",
     "test": "tap test.js"
   },
   "main": "./index.js",
@@ -18,12 +17,13 @@
     "lookup"
   ],
   "dependencies": {
+    "startpoint": "0.3.x",
     "endpoint": "0.4.x",
-    "cheerio": "0.19.x",
-    "async": "1.3.x"
+    "mappoint": "0.2.x",
+    "cheerio": "0.19.x"
   },
   "devDependencies": {
-    "tap": "1.3.x"
+    "tap": "1.4.x"
   },
   "license": "MIT"
 }
