--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "2.0.0",
   "author": "Andreas Madsen <amwebdk@gmail.com>",
   "scripts": {
-    "test": "tap test.js"
+    "test": "tap -R=tap -t=600 test.js"
   },
   "main": "./index.js",
   "repository": {
